[gd_scene load_steps=4 format=3 uid="uid://0l4wonkcwxbb"]

[ext_resource type="Script" path="res://src/Menus/MainMenu/main_menu.gd" id="1_e5w8r"]
[ext_resource type="Theme" uid="uid://d1ihrcds1upna" path="res://resources/default_theme.tres" id="1_m3tr5"]
[ext_resource type="Script" path="res://src/Menus/MainMenu/slot_selection_panel.gd" id="3_axqi1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m3tr5")
script = ExtResource("1_e5w8r")
main_game_path_1p = "res://src/Game/MainGame/main_game_1p.tscn"
main_game_path_2p = "res://src/Game/MainGame/main_game_2p.tscn"
character_creator_scene = "res://src/Menus/CharacterCreationScreen/characer_creation_screen.tscn"
loading_screen_scene = "res://src/Menus/LoadingScreen/loading_screen.tscn"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../LoadButton")
focus_neighbor_bottom = NodePath("../LoadButton")
focus_next = NodePath("../LoadButton")
focus_previous = NodePath("../QuitButton")
text = "Start Game"
alignment = 0

[node name="LoadButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../StartButton")
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../StartButton")
text = "Load Game"
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../LoadButton")
focus_neighbor_top = NodePath("../LoadButton")
focus_neighbor_right = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../LoadButton")
text = "Quit"
alignment = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Press <A> Button or <Enter> Key to join"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SlotSelectionPanel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_axqi1")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/SlotSelectionPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/SlotSelectionPanel/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/SlotSelectionPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/SlotSelectionPanel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/SlotSelectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Slot1Button" type="Button" parent="CenterContainer/SlotSelectionPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 1
"

[node name="Slot2Button" type="Button" parent="CenterContainer/SlotSelectionPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 2"

[node name="Slot3Button" type="Button" parent="CenterContainer/SlotSelectionPanel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Slot 3"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="slot_selection_panel_closed" from="CenterContainer/SlotSelectionPanel" to="." method="_on_slot_selection_panel_slot_selection_panel_closed"]
